# ssh-auto-forward

./: .gitignore  Makefile  README.md  pyproject.toml  tests.md
.github/workflows/: test.yml
benchmarks/: Dockerfile  README.md  bench_buffer_sweep.py  bench_common.py  bench_html_stress.py  bench_large_files.py  download_helper.py  nginx-benchmark.conf  results_buffer_sweep.json  results_html_stress.json  results_large_files.json  stream_generator.py  tunnel_helper.py
ssh_auto_forward/: __init__.py  cli.py  dashboard.py  forwarder.py
tests/: test_cli.py
tests_integration/: test_auto_forward.py  test_dashboard.py
