[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssh-auto-forward"
description = "Auto-forward SSH ports"
readme = "README.md"
license = {text = "WTFPL"}
requires-python = ">=3.10"
dynamic = ["version"]

dependencies = [
    "paramiko>=3.4.0",
    "textual>=8.0.0",
]

authors = [
    {name = "alexe"}
]

keywords = ["ssh", "port-forwarding", "tunnel", "remote-development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
ssh-auto-forward = "ssh_auto_forward.cli:main"

[dependency-groups]
dev = [
    "hatch",
    "pytest",
    "pytest-asyncio>=1.3.0",
    "pytest-cov",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["ssh_auto_forward"]

[tool.hatch.version]
path = "ssh_auto_forward/__version__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
